- Launchpad Doctor tab now includes `Run Adapter Doctor (Strict)`, executing fail-closed adapter health checks (`adapter doctor --text --strict`) directly from UI.
- Launchpad Doctor tab now includes `Copy Doctor Output` and supports keyboard copy (`Ctrl+C`) from the doctor output pane.
- Ticket-pack regression coverage now enforces inclusion of adapter evidence artifacts (`analysis/capability_ledger_v0.json`, `analysis/adapter_summary_v0.json`, `analysis/adapter_findings_v0.json`) when present in run output.
- Ticket-pack default extras now include `report_card_v0.json` so structured report data is always included in support bundles when available.
- Ticket-pack summary now includes adapter evidence fields (`adapterEvidence`, `adapterClass`, `adapterId`, `adapterMode`, and capability counts) for faster support triage.
- Ticket-pack summary now also includes digest identity fields (`operatorReceiptFileDigest`, `safeReceiptFileDigest`, `reportCardFileDigest`) and artifact fingerprint/digest for quicker cross-verification.
- Ticket-pack summary now includes report state context fields (`reportRunId`, `reportLibraryKey`, `reportStatus`, `reportBaseline`, `reportLatest`, `reportBuckets`) for support triage without opening report files.
- Ticket-pack contract coverage now enforces report-state extraction from `report_card_v0.json` and validates digest identity line format (`sha256:<64hex>`) in `ticket_summary.txt`.
- Ticket-pack contract coverage now also enforces text fallback parsing from `report_card.txt` (`STATUS/BASELINE/LATEST/BUCKETS` plus key-value lines) when structured report JSON is absent.
- Windows shell `report_card.txt` and `report_card_v0.json` now include adapter metadata and capability counts when adapter evidence exists:
- `adapterMeta=class:<class> mode:<mode> source:<format> reasons:<codes>`
- `capabilities=requested:<n> granted:<n> denied:<n>`
- New bind/unbind right-click flow: